--- a/site/about_us.html
+++ b/site/about_us.html
@@ -81,7 +81,7 @@
         <div class="katalog_title">
             <div class="container kat">
                 <div class="title_inner">
-                    <h1>Ведуться технічні роботи</h1>
+                    <h1>Про нас</h1>
                 </div>
             </div>
         </div>
@@ -90,16 +90,22 @@
             <div class="container">
                 <div class="inner_contacts">
                     <div class="text_contacts">
-                        <p>Основна ідеологія нашого сайту полягає в наданні допомоги кожному нашому клієнту в підборі і замовленні зручного і доступного за ціною транспортного засобу. Кроки, які робить наша команда в цьому напрямку:</p>
-
-                        <p>постійний моніторинг ринку новинок електротранспорту засобів;<br> своєчасне оновлення асортименту пропонованого товару;<br> гнучка цінова політика, орієнтована на фінансові можливості потенційних покупців і постійних клієнтів;<br>                            максимально докладно розкрита інформація щодо технічних характеристик моделей, представлених на сайті girosmart.com.ua.<br> Місія нашої компанії полягає в наданні права кожному охочому стати власником сучасного і якісного електротранспорту
-                            з мінімальними витратами тимчасових і матеріальних ресурсів. Ми орієнтовані на задоволення потреб кожного клієнта.</p>
-
-                        <p>Асортимент магазину включає моделі для дітей та дорослих</p>
+                        <p>Основна ідеологія нашого сайту полягає в наданні допомоги кожному нашому клієнту в підборі і замовленні зручного і доступного за ціною транспортного засобу. Кроки, які робить наша команда в цьому напрямку. Постійний моніторинг
+                            ринку новинок електротранспорту засобів, своєчасне оновлення асортименту пропонованого товару, гнучка цінова політика, орієнтована на фінансові можливості потенційних покупців і постійних клієнтів, максимально докладно розкрита
+                            інформація щодо технічних характеристик моделей, представлених на сайті ElectroWheels. Місія нашої компанії полягає в наданні права кожному охочому стати власником сучасного і якісного електротранспорту з мінімальними витратами
+                            тимчасових і матеріальних ресурсів. Ми орієнтовані на задоволення потреб кожного клієнта. Асортимент магазину включає моделі для дітей та дорослих</p>
 
                         <p>Завдяки великому практичному досвіду наших співробітників і грамотно організованою логістичної системі ми здатні задовольнити запити клієнта будь-якої вікової групи. На нашому сайті ви можете придбати наступні вироби:</p>
 
-                        <p>гіроборди;<br> гіроскутери 6,5;<br> гіроскутери 8;<br> гіроскутери 10;<br> гіроскутери 10,5;<br> електросамокати;
+                        <ul class="about_us" style="margin-top: 20px; margin-bottom: 20px;">
+                            <li class="abt_us">Гіроборди</li>
+                            <li class="abt_us">Гіроскутери 6,5</li>
+                            <li class="abt_us">Гіроскутери 8</li>
+                            <li class="abt_us">Гіроскутери 10</li>
+                            <li class="abt_us">Гіроскутери 10,5</li>
+                            <li class="abt_us">Електросамокати</li>
+                        </ul>
+
                         </p>
 
                         <p>Наявність такого широкого асортименту товару на нашому сайті обумовлено різноманітністю смаків, потреб і фінансових можливостей покупців.</p>
@@ -114,26 +120,46 @@
 
 
         <div class="title_footer">
-            <div class="logo_contacts">
-                <div class="footer_logo">
-                    <img src="logo/logo.png" width="160px" alt="logo">
-                </div>
-                <div class="footer_contacts">
-                    <img src="../../icons/instagram.png" alt="">
-                    <img src="../../icons/telegram.png" alt="">
-                    <img src="../../icons/facebook.png" alt="">
-                    <img src="../../icons/youtube.png" alt="">
-                </div>
-            </div>
-            <div class="container kat">
-                <div class="innerFooter">
-                    <footer class="footer">
-                        <div class="footer_text">
-                            <p>У нашому інтернет магазині hoverboard.com.ua ви можете купити недорого Ninebot Mini (Найнбот Міні) за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір.
-                                На сторінках нашого інтернет магазину ви знайдете характеристики, фото, ціни на 2020 і повний опис товару.</p>
+            <div class="container">
+                <footer class="footer">
+                    <div class="logo_contacts ">
+                        <div class="footer_logo ">
+                            <img src="logo/logo.png " alt="logo ">
                         </div>
-                    </footer>
-                </div>
+                        <div class="footer_contacts">
+                            <img src="icons/instagram.png" alt="">
+                            <img src="icons/facebook.png " alt=" ">
+                            <img src="icons/telegram.png " alt=" ">
+                            <img src="icons/youtube.png " alt=" ">
+                        </div>
+                    </div>
+                    <div class="footer_text ">
+                        <p>У нашому інтернет магазині ElectroWheels ви можете купити персональний електротранспорт за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір. На сторінках
+                            нашого інтернет магазину ви знайдете характеристики, фото, ціни на 2020 рік.</p>
+                    </div>
+
+
+
+                    <div class="contacts_info ">
+                        <div class="contacts ">
+                            <div class="phone "><img src="./icons/phone.png " alt="phone "></div>
+                            <div class="number ">
+                                <p>096-760-52-21</p>
+                            </div>
+                        </div>
+                        <div class="adress ">
+                            <div class="phone "><img src="./icons/metka.png " alt="metka "></div>
+                            <div class="adress_txt ">
+                                <p>м.Ізмаїл, проспект Суворова, 62</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+
+                </footer>
             </div>
         </div>
 
@@ -169,8 +195,8 @@
             body.classList.remove('_lock')
         }
     </script>
-    <script src="js/ajax_request.js"></script>
-    <script src="js/db_catalog.js"></script>
+    <script src="js/ajax_request.js "></script>
+    <script src="js/db_catalog.js "></script>
 </body>
 
 </html>
