--- a/site/contacts.html
+++ b/site/contacts.html
@@ -116,7 +116,7 @@
                     </div>
                     <div class="right_contacts">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9078016667595!2d28.835537715543175!3d45.35067337909977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b765f8f9492689%3A0x4046dda8d356b387!2z0L_RgNC-0YHQvy4g0KHRg9Cy0L7RgNC-0LLQsCwgNjIsINCY0LfQvNCw0LjQuywg0J7QtNC10YHRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNjg2MDE!5e0!3m2!1sru!2sua!4v1608104146223!5m2!1sru!2sua"
-                            width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                            frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
 
 
@@ -129,26 +129,46 @@
 
 
         <div class="title_footer">
-            <div class="logo_contacts">
-                <div class="footer_logo">
-                    <img src="logo/logo.png" width="160px" alt="logo">
-                </div>
-                <div class="footer_contacts">
-                    <img src="../../icons/instagram.png" alt="">
-                    <img src="../../icons/telegram.png" alt="">
-                    <img src="../../icons/facebook.png" alt="">
-                    <img src="../../icons/youtube.png" alt="">
-                </div>
-            </div>
-            <div class="container kat">
-                <div class="innerFooter">
-                    <footer class="footer">
-                        <div class="footer_text">
-                            <p>У нашому інтернет магазині hoverboard.com.ua ви можете купити недорого Ninebot Mini (Найнбот Міні) за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір.
-                                На сторінках нашого інтернет магазину ви знайдете характеристики, фото, ціни на 2020 і повний опис товару.</p>
+            <div class="container">
+                <footer class="footer">
+                    <div class="logo_contacts ">
+                        <div class="footer_logo ">
+                            <img src="logo/logo.png " alt="logo ">
                         </div>
-                    </footer>
-                </div>
+                        <div class="footer_contacts">
+                            <img src="icons/instagram.png" alt="">
+                            <img src="icons/facebook.png" alt=" ">
+                            <img src="icons/telegram.png" alt=" ">
+                            <img src="icons/youtube.png" alt=" ">
+                        </div>
+                    </div>
+                    <div class="footer_text ">
+                        <p>У нашому інтернет магазині ElectroWheels ви можете купити персональний електротранспорт за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір. На сторінках
+                            нашого інтернет магазину ви знайдете характеристики, фото, ціни на 2020 рік.</p>
+                    </div>
+
+
+
+                    <div class="contacts_info">
+                        <div class="contacts">
+                            <div class="phone"><img src="./icons/phone.png " alt="phone "></div>
+                            <div class="number ">
+                                <p>096-760-52-21</p>
+                            </div>
+                        </div>
+                        <div class="adress ">
+                            <div class="phone"><img src="./icons/metka.png " alt="metka "></div>
+                            <div class="adress_txt ">
+                                <p>м.Ізмаїл, проспект Суворова, 62</p>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+
+                </footer>
             </div>
         </div>
 
