--- a/site/product.html
+++ b/site/product.html
@@ -197,26 +197,46 @@
     </div>
     </div>
     <div class="title_footer">
-        <div class="logo_contacts">
-            <div class="footer_logo">
-                <img src="logo/logo.png" alt="logo">
-            </div>
-            <div class="footer_contacts">
-                <img src="icons/instagram.png" alt="">
-                <img src="icons/telegram.png" alt="">
-                <img src="icons/facebook.png" alt="">
-                <img src="icons/youtube.png" alt="">
-            </div>
-        </div>
         <div class="container">
-            <div class="innerFooter">
-                <footer class="footer">
-                    <div class="footer_text">
-                        <p>У нашому інтернет магазині hoverboard.com.ua ви можете купити недорого Ninebot Mini (Найнбот Міні) за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір.
-                            На сторінках нашого інтернет магазину ви знайдете характеристики, фото, ціни на 2020 і повний опис товару.</p>
+            <footer class="footer">
+                <div class="logo_contacts ">
+                    <div class="footer_logo ">
+                        <img src="logo/logo.png " alt="logo ">
                     </div>
-                </footer>
-            </div>
+                    <div class="footer_contacts">
+                        <img src="icons/instagram.png" alt="">
+                        <img src="icons/facebook.png " alt=" ">
+                        <img src="icons/telegram.png " alt=" ">
+                        <img src="icons/youtube.png " alt=" ">
+                    </div>
+                </div>
+                <div class="footer_text ">
+                    <p>У нашому інтернет магазині ElectroWheels ви можете купити персональний електротранспорт за найнижчими цінами в Україні на 2020 рік. Наші фахівці підберуть вам персональний електротранспорт на будь-який смак і колір. На сторінках нашого
+                        інтернет магазину ви знайдете характеристики, фото, ціни на 2020 рік.</p>
+                </div>
+
+
+
+                <div class="contacts_info ">
+                    <div class="contacts ">
+                        <div class="phone "><img src="./icons/phone.png " alt="phone "></div>
+                        <div class="number ">
+                            <p>096-760-52-21</p>
+                        </div>
+                    </div>
+                    <div class="adress ">
+                        <div class="phone "><img src="./icons/metka.png " alt="metka "></div>
+                        <div class="adress_txt ">
+                            <p>м.Ізмаїл, проспект Суворова, 62</p>
+                        </div>
+
+                    </div>
+                </div>
+
+
+
+
+            </footer>
         </div>
     </div>
 
@@ -224,7 +244,7 @@
 
 
     <!-- Swiper JS -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js "></script>
 
     <!-- Initialize Swiper -->
     <script>
@@ -280,8 +300,8 @@
             body.classList.remove('_lock')
         }
     </script>
-    <script src="js/ajax_request.js"></script>
-    <script src="js/product_page.js"></script>
+    <script src="js/ajax_request.js "></script>
+    <script src="js/product_page.js "></script>
 </body>
 
 </html>
